# Renderer

./: CMakeLists.txt
.stfolder/: syncthing-folder-0ac3de.txt
res/: basic.glsl  light.glsl  texture.glsl
src/: #win32-gl.h#  basics.h  camera.h  glext.h  main.cpp  mat4.h  math.h  shader.h  vec2.h  vec3.h  vec4.h  wglext.h  win32-gl.h  x11-gl.h
